tests/hulk/ok/minimal/let_binding.hulk
let x = 10, y = 20 in {
    if (x + y == 30) print("ok") else print("fail");
    let z = x * y in
        if (z == 200) print("ok") else print("fail");
};
