tests/hulk/errors/syntactic/invalid_assignment.hulk
let 42 = x in print(x);
